--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #3498db;
+    --primary-color: #037ccc;
     --secondary-color: #2ecc71;
     --font-family: 'Arial, sans-serif';
 }
